cleaned up projects on mobile. Tweaked a few small issues

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -31,6 +31,10 @@
     font-size:40px;
 }
 
+.projects-subheader{
+    text-align: center;
+}
+
 #projects{
     @include flex-row;
     justify-content:center;
@@ -194,6 +198,13 @@ footer{
         margin-right: 20px;
     }
 }
+
+@media screen and (max-width: 1300px){
+  #projects  .project{
+        margin-bottom:60px
+    }
+}
+
 @media screen and (max-width: 1500px){
   .container{
       width:100%;
